app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";


.full {
  background: url("https://www.ciroc.com/img/bg_gradient-noRepeat.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.page-top-buffer {
  margin-top: 80px;
}

.navbar {
  .inverse-dropdown{
    background-color: #222;
    border-color: #080808;
    &>li>a{
      color: #999;
      &:hover{
        color: #fff;
        background-color: #000;
      }
    }
    .divider {
      background-color: #999;
    }
  }
}

// home page

.panel-image {
  height: 242px;
}

.panel-content {
  height: 141px;
}

.home-quote {
  margin-bottom: 3%;
}


// about page

.about-page {

  p {
    margin-bottom: 10px;
    font-size: 18px;
  }

  img {
    width: 100%;
  }
}

// terms page

.terms-description {
  margin-top: 3%;
}

.terms-bottom-buffer {
  margin-bottom: 40%;
}

// faq

.faq-large-buffer {
  margin-bottom: 5%;
}

.faq-small-buffer {
  margin-bottom: 2%;
}

// tasks


.badge {
  margin-left: 5px;
}

.tasks-td-top-buffer {
  margin-top: 8px;
}

.tasks-sort-links {
  margin-top: 3%;
  text-align: right;
  left: 55px;
  bottom: 6px;

}

.tasks-create-button {
  margin-top: 2%;
}

.task-form {
  .check {
    input {
      margin-left: 15px;
    }
  }
}

.breadcrumb {
  background: none;
  margin-left: -12px;
}

.task-show {

  .btn {
    margin-top: 25px;
  }

  .user-comment {
    margin-bottom: 20px;
  }
}

// user

.user-info {
  text-align: right;
}

.delete-user {
  padding-left: 26px;
  padding-right: 55px;
}

// members
.current-members {
  margin-bottom: 1%;

  .name{
    margin-top: 8px;
  }
  .delete-x{
    position: relative;
    top: 6px;
  }
  .member-users{
    margin-top: 8px;
  }
}
.middle-select {
  margin-left: 12px;
}

// projects

.project-show {

  .destroy-box {

    .heading {
      font-size: 18px;
      margin-left: 10px;
    }
    .content {
      font-size: 16px;
      margin-left: 10px;
    }
    .destroy {
      margin-left: 10px;
    }
  }
}

// footer

hr {
  border-top: solid 1px #777777;
}

.footer-content {
  height: 75px;
}

.footer-link-image {
  width: 20px;
}

.footer-link-image2 {
  width: 50px;
}

// .user-footer {
//   margin: 0 auto;
// }





// end

